<resources>
    <string name="app_name">Polls</string>
    <string name="sign_in">Sign-In</string>
    <string name="create_poll">Create Poll</string>
    <string name="content_desc_logo">logo</string>
    <string name="loading">Loading...</string>
    <string name="question">Question</string>
    <string name="publication_date">Publication date</string>
    <string name="description">Description</string>
    <string name="submit">Submit</string>
    <string name="add_choice">Add choice</string>
    <string name="results">Results</string>
</resources>