<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/dest_splash">
    <fragment
        android:id="@+id/dest_splash"
        android:name="com.teamaad34.polls.ui.splash.SplashFragment"
        android:label="@string/app_name"
        tools:layout="@layout/splash_fragment" />

    <fragment
        android:id="@+id/dest_sign_in"
        android:name="com.teamaad34.polls.ui.auth.SignInFragment"
        android:label="@string/sign_in" />
    <fragment
        android:id="@+id/dest_create_poll"
        android:name="com.teamaad34.polls.ui.poll.create.PollCreateFragment"
        android:label="@string/create_poll" />
    <fragment
        android:id="@+id/dest_poll_result"
        android:name="com.teamaad34.polls.ui.poll.result.PollResultFragment"
        android:label="Poll results" />
    <fragment
        android:id="@+id/dest_poll_vote"
        android:name="com.teamaad34.polls.ui.poll.vote.PollVoteFragment"
        android:label="Vote" />
</navigation>