<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.poll.create.PollCreateFragment">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            android:theme="@style/ThemeOverlay.AppTheme.AppBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                style="@style/Widget.MaterialComponents.Toolbar.Primary"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:theme="@style/ThemeOverlay.AppTheme.AppBar.Toolbar"
                app:menu="@menu/create_poll"
                app:navigationIcon="@drawable/ic_navigate_back"
                app:popupTheme="@style/ThemeOverlay.AppTheme.Toolbar.Popup">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:gravity="start|center_vertical"
                    android:text="@string/create_poll"
                    android:textAppearance="?attr/textAppearanceHeadline5" />

            </com.google.android.material.appbar.MaterialToolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:id="@+id/scroll"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/appbar">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="24dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/question_container"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:hint="@string/question"
                    app:errorEnabled="true"
                    app:hintAnimationEnabled="true"
                    app:hintEnabled="true"
                    app:layout_constraintBottom_toTopOf="@id/publication_date_container"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/question"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/publication_date_container"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:hint="@string/publication_date"
                    app:endIconContentDescription="publication date"
                    app:endIconDrawable="@drawable/ic_date"
                    app:endIconMode="custom"
                    app:errorEnabled="true"
                    app:hintAnimationEnabled="true"
                    app:hintEnabled="true"
                    app:layout_constraintBottom_toTopOf="@id/description_container"
                    app:layout_constraintEnd_toEndOf="@id/question_container"
                    app:layout_constraintStart_toStartOf="@id/question_container"
                    app:layout_constraintTop_toBottomOf="@id/question_container">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/publication_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="date"
                        android:selectAllOnFocus="true"
                        android:singleLine="true" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/description_container"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/description"
                    app:errorEnabled="true"
                    app:hintAnimationEnabled="true"
                    app:hintEnabled="true"
                    app:layout_constraintBottom_toTopOf="@id/choices"
                    app:layout_constraintEnd_toEndOf="@id/publication_date_container"
                    app:layout_constraintStart_toStartOf="@id/publication_date_container"
                    app:layout_constraintTop_toBottomOf="@id/publication_date_container">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="top|start"
                        android:inputType="textMultiLine"
                        android:lines="4"
                        android:maxLines="4"
                        android:selectAllOnFocus="true"
                        android:textAlignment="gravity" />
                </com.google.android.material.textfield.TextInputLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/choices"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:paddingTop="8dp"
                    android:visibility="gone"
                    app:layout_constraintBottom_toTopOf="@id/submit"
                    app:layout_constraintEnd_toEndOf="@id/description_container"
                    app:layout_constraintStart_toStartOf="@id/description_container"
                    app:layout_constraintTop_toBottomOf="@id/description_container"
                    tools:visibility="visible" />

                <!-- TODO: Convert button to FloatingActionButton or an options menu item to leave
                        room for choices(RecyclerView) -->
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/submit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/submit"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@id/description_container"
                    app:layout_constraintStart_toStartOf="@id/description_container"
                    app:layout_constraintTop_toBottomOf="@id/choices" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>